--- a/css/styles.css
+++ b/css/styles.css
@@ -115,17 +115,21 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero {
+background-color: #2e2f42;
+background-image: 
+    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/fon-hero.jpeg);
+       background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center; 
     padding-top: 188px;
     padding-bottom: 188px;
     max-width: 1140px;
     margin: 0 auto;
-     background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-color: #2e2f42;
-    background-image: 
-    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(./images/fon-hero.jpeg);
-}
+ 
+ 
+     
+ 
+  }
 
 .title {
   font-size: 56px;
