--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .hero {
 background-color: #2e2f42;
 background-image: 
-    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/fon-hero.jpeg);
+    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(/images/fon-hero.jpeg);
        background-repeat: no-repeat;
   background-size: cover;
   background-position: center; 
@@ -125,10 +125,7 @@ background-image:
     padding-bottom: 188px;
     max-width: 1140px;
     margin: 0 auto;
- 
- 
-     
- 
+  
   }
 
 .title {
@@ -270,17 +267,24 @@ flex-direction: row;
 gap: 24px;
 }
 
-.ourtem-icon:hover {
+.ourtem-soc-link:hover,
+.ourtem-soc-link:focus {
   background-color: #31D0AA;
   }
 
-.ourtem-icon {
-width: 40px;
-height: 40px;
-  background-color: #4D5AE5;
+.ourtem-soc-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #4d5ae5;
   border-radius: 50%;
- transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  padding: 12px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;}
+
+.ourtem-icon {
+  fill:#4D5AE5;}
+
 
 .team-card {background-color: #FFFFFF;
 width: calc (( 100 % - 72 px ) / 4);
@@ -312,48 +316,39 @@ margin-bottom: 72px;
   gap: 48px 24px; 
 }
 .portfolio-item {
-width: calc (( 100% - 72 px ) / 4);}
+width: calc (( 100% - 72 px ) / 4);
+}
  
-/* .item-two { 
-cursor: pointer;
-transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.portfolio-item:hover .overlay-text 
+{
+transform: translateY(0%);
 }
 
-.item-two:hover,
-.item-two:focus 
-{box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-  0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);}
+.ovarlay-wrap
+{position: relative;
+  overflow: hidden;
+}
 
-.portfolio-two:hover .overley-text,
-.portfolio-two:focus .overley-text {
-  transform: translateY(0);
-  background-color: #4d5ae5;}
-
-.images-overlay {
-  position: relative;
-  overflow: hidden;}
-
-.overlay-text {  
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
-  background-color: #4d5ae5;
-  padding: 40px 32px;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  position: absolute;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);} */
+.overlay-text
+{position: absolute;
+top: 0%;
+left: 0%;
+padding: 40px 32px 164px 32px;
+transform: translateY(100%);
+height: 100%;
+background-color: #4d5ae5;
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #f4f4fd;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
 .project-text {
 border: 1px solid #e7e9fc;
 padding: 32px 16px; 
 border-top: none; 
-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-text:hover {
@@ -406,10 +401,6 @@ margin-bottom: 16px;
 
 .footer-span-logo {color: #f4f4fd;}
 
-.footer-icon {
-  width: 208px;
- }
-
 .text-social
 {font-weight: 500;
 font-size: 16px;
@@ -420,22 +411,28 @@ width: 96px;
 margin-bottom:  16px;
 }
 
-.menu-icon {display: flex;
-align-items: flex-start;
-justify-content: flex-start;
+.footer-soc-list {
+display: flex;
+align-items: center;
+justify-content: center;
 flex-direction: row;
 gap: 16px;
 }
 
-.icon-social {
-width: 40px;
-height: 40px;
-fill: none;
-background-color: #4D5AE5;
-border-radius: 50%;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.icon-social:hover {
+.footer-soc-link:hover,
+.footer-soc-link:focus {
   background-color: #31D0AA;
   }
+
+.footer-soc-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  padding: 12px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;}
+
+.footer-icon {
+  fill:#4D5AE5;}
