--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .hero {
 background-color: #2e2f42;
 background-image: 
-    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(/images/fon-hero.jpeg);
+    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(./images/fon-hero.jpeg);
        background-repeat: no-repeat;
   background-size: cover;
   background-position: center; 
