--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ a {text-decoration: none;}
 .header
 {
 border-bottom: 1px solid #e7e9fc;
-}
+box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08); }
 
 .container {
 width: 1158px;
@@ -75,6 +75,18 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  position: relative; 
 }
 
+.link-nav.current::after 
+{
+content: '';
+width: 100%
+position: absolute;
+left: 0;
+bottom: -1px;
+height: 4px; 
+background-color: #404bbf; 
+border-radius: 2px;
+}
+
 .link-nav.current::before {
 content: "";
  position: absolute; 
@@ -117,16 +129,15 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .hero {
 background-color: #2e2f42;
 background-image: 
-    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(./images/fon-hero.jpeg);
+    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/fon-hero.jpeg);
        background-repeat: no-repeat;
   background-size: cover;
   background-position: center; 
     padding-top: 188px;
     padding-bottom: 188px;
-    max-width: 1140px;
+    max-width: 1440px;
     margin: 0 auto;
-  
-  }
+    }
 
 .title {
   font-size: 56px;
@@ -268,8 +279,8 @@ gap: 24px;
 }
 
 .ourtem-soc-link:hover,
-.ourtem-soc-link:focus {
-  background-color: #31D0AA;
+.ourtem-soc-link:focus 
+{background-color: #404bbf;
   }
 
 .ourtem-soc-link {
@@ -283,14 +294,13 @@ gap: 24px;
   cursor: pointer;}
 
 .ourtem-icon {
-  fill:#4D5AE5;}
+  fill:#f4f4fd;}
 
 
 .team-card {background-color: #FFFFFF;
 width: calc (( 100 % - 72 px ) / 4);
  border-bottom-right-radius: 4px;
-border-bottom-left-radius: 4px;
-box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);}
+border-bottom-left-radius: 4px;}
 
 .name-text {padding: 32px 16px;
 text-align: center;
@@ -317,8 +327,11 @@ margin-bottom: 72px;
 }
 .portfolio-item {
 width: calc (( 100% - 72 px ) / 4);
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
  
+.portfolio-item:hover {box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);}
+
 .portfolio-item:hover .overlay-text 
 {
 transform: translateY(0%);
@@ -333,7 +346,7 @@ transform: translateY(0%);
 {position: absolute;
 top: 0%;
 left: 0%;
-padding: 40px 32px 164px 32px;
+padding: 40px 32px;
 transform: translateY(100%);
 height: 100%;
 background-color: #4d5ae5;
@@ -348,12 +361,7 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 border: 1px solid #e7e9fc;
 padding: 32px 16px; 
 border-top: none; 
-transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.project-text:hover {
-    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  }
 
 .project {
   font-weight: 500; 
@@ -370,9 +378,10 @@ padding-top: 100px;
 padding-bottom: 100px;
 }
 
-.menu-footer {
+.footer-div {
 display: flex;
 align-items: baseline;
+width: 208px;
 }
 
 .logo-text {
@@ -411,6 +420,11 @@ width: 96px;
 margin-bottom:  16px;
 }
 
+.footer-soc-item {
+
+width: 40px;
+height: 40px;}
+
 .footer-soc-list {
 display: flex;
 align-items: center;
@@ -418,6 +432,7 @@ justify-content: center;
 flex-direction: row;
 gap: 16px;
 }
+
 
 .footer-soc-link:hover,
 .footer-soc-link:focus {
@@ -428,7 +443,9 @@ gap: 16px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #4d5ae5;
+ width: 100%; 
+ height: 100%;
+background-color: #4d5ae5;
   border-radius: 50%;
   padding: 12px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
