--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .link-nav.current::after 
 {
 content: '';
-width: 100%
+width: 100%;
 position: absolute;
 left: 0;
 bottom: -1px;
@@ -299,8 +299,9 @@ gap: 24px;
 
 .team-card {background-color: #FFFFFF;
 width: calc (( 100 % - 72 px ) / 4);
- border-bottom-right-radius: 4px;
-border-bottom-left-radius: 4px;}
+border-bottom-right-radius: 4px;
+border-bottom-left-radius: 4px;
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); }
 
 .name-text {padding: 32px 16px;
 text-align: center;
@@ -378,9 +379,11 @@ padding-top: 100px;
 padding-bottom: 100px;
 }
 
-.footer-div {
+.menu-footer {
 display: flex;
 align-items: baseline;
+}
+.footer-div {
 width: 208px;
 }
 
@@ -421,7 +424,6 @@ margin-bottom:  16px;
 }
 
 .footer-soc-item {
-
 width: 40px;
 height: 40px;}
 
@@ -434,8 +436,12 @@ gap: 16px;
 }
 
 
-.footer-soc-link:hover,
-.footer-soc-link:focus {
+.footer-soc-link:hover {
+  background-color: #31D0AA;
+  }
+
+.footer-soc-link:focus
+{
   background-color: #31D0AA;
   }
 
@@ -452,4 +458,4 @@ background-color: #4d5ae5;
   cursor: pointer;}
 
 .footer-icon {
-  fill:#4D5AE5;}
+  fill: #f4f4fd; }
